--- a/templates/ClientHome/BlogManagement/edit-article.html.twig
+++ b/templates/ClientHome/BlogManagement/edit-article.html.twig
@@ -1,14 +1,12 @@
 {% extends 'base.html.twig' %}
-{% block title %}Home - ArtHub{% endblock %}
+{% block title %}Edit Article{% endblock %}
 
 {% block body %}
 
-    {% include 'ClientHome/header.html.twig' with {'page_title': 'Dump your mind'} %}
-
-    <div class="contact-one">
+    <div class="contact-one"> <!-- Add class "contact-one" -->
         <div class="container">
             <div class="block-title-two text-center">
-                <p>Create a post</p>
+                <p>Edit Article</p> <!-- Adjust the title if needed -->
             </div>
 
             <div class="row">
@@ -25,7 +23,7 @@
                             {{ form_row(form.contenu) }}
                         </div>
                         <div class="col-lg-12">
-                            {{ form_row(form.submit) }} 
+                            {{ form_row(form.update) }} <!-- Update button -->
                         </div>
                     </div>
                     {{ form_end(form) }}
@@ -33,5 +31,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
