--- a/templates/ClientHome/BlogManagement/edit-article.html.twig
+++ b/templates/ClientHome/BlogManagement/edit-article.html.twig
@@ -1,29 +1,34 @@
 {% extends 'base.html.twig' %}
-{% block title %}Edit Article{% endblock %}
+{% block title %}Home - ArtHub{% endblock %}
 
 {% block body %}
 
-    <div class="contact-one"> <!-- Add class "contact-one" -->
+    {% include 'ClientHome/header.html.twig' with {'page_title': 'Dump your mind'} %}
+
+    <div class="contact-one">
         <div class="container">
             <div class="block-title-two text-center">
-                <p>Edit Article</p> <!-- Adjust the title if needed -->
+                <p>Create a post</p>
             </div>
 
             <div class="row">
                 <div class="col-lg-8">
-                    {{ form_start(form, {'attr': {'class': 'contact-form-validated contact-one__form'}}) }}
+                    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                     <div class="row">
                         <div class="col-lg-6">
                             {{ form_row(form.titre) }}
+                            <div class="text-danger">{{ form_errors(form.titre) }}</div>
                         </div>
                         <div class="col-lg-6">
                             {{ form_row(form.imagePath) }}
+                            <div class="text-danger">{{ form_errors(form.imagePath) }}</div>
                         </div>
                         <div class="col-lg-12">
                             {{ form_row(form.contenu) }}
+                            <div class="text-danger">{{ form_errors(form.contenu) }}</div>
                         </div>
                         <div class="col-lg-12">
-                            {{ form_row(form.update) }} <!-- Update button -->
+                            {{ form_row(form.submit, {'label': 'Update'}) }} 
                         </div>
                     </div>
                     {{ form_end(form) }}
@@ -31,4 +36,5 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
