fixed the templates about 85%

--- a/templates/ClientHome/BlogManagement/add-article.html.twig
+++ b/templates/ClientHome/BlogManagement/add-article.html.twig
@@ -20,6 +20,7 @@
                             <div class="text-danger">{{ form_errors(form.titre) }}</div>
                         </div>
                         <div class="col-lg-6">
+                        <i class="fas fa-paperclip"></i>
                             {{ form_row(form.imagePath) }}
                             <div class="text-danger">{{ form_errors(form.imagePath) }}</div>
                         </div>
