latest version of the things

--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -206,7 +206,7 @@
 	</nav>
 	<!-- /.main-nav-one -->
 	
-		<section class="page-header" style="background-image: url('{{ asset('images/blog/blog-s-2.jpg')}}'); background-size: cover; background-position: center; width: 100%;">
+		<section class="page-header" style="background-image: url('{{ asset('clientHome/images/blog-s-2.jpg')}}'); background-size: cover; background-position: center; width: 100%;">
 			<div class="container">
 				<h2>{{ page_title }}</h2>
 			</div>
