--- a/templates/ClientHome/BlogManagement/article-details.html.twig
+++ b/templates/ClientHome/BlogManagement/article-details.html.twig
@@ -88,103 +88,22 @@
 						</div>
 						<!-- /.sidebar__single -->
 						<div class="sidebar__single">
-							<h3 class="sidebar__title">Categories</h3>
-							<p>Lorem ipsum dolor sit amet consectur pisicelit sed do.</p>
+							<h3 class="sidebar__title">Blogs</h3>
+							<p>You can explore here every thing you see .</p>
 							<ul class="list-unstyled sidebar__cat-list">
 								<li>
-									<a href="#">Education</a>
+									<a href="#">All Blogs</a>
 								</li>
 								<li>
-									<a href="#">Olympiad</a>
+									<a href="#">My Blogs</a>
 								</li>
 								<li>
-									<a href="#">Drawing</a>
-								</li>
-								<li>
-									<a href="#">Science</a>
-								</li>
-								<li>
-									<a href="#">Mathmetics</a>
+									<a href="{{ path('add_article') }}">Add Blog</a>
 								</li>
 							</ul>
-							<!-- /.list-unstyled sidebar__cat-list -->
 						</div>
-						<!-- /.sidebar__single -->
-						<div class="sidebar__single">
-							<h3 class="sidebar__title">Latest News</h3>
-							<div class="sidebar__post">
-								<div class="sidebar__post-single">
-									<div class="sidebar__post-image">
-										<img src="assets/images/blog/blog-lp-1-1.jpg" alt="">
-									</div>
-									<!-- /.sidebar__post-image -->
-									<div class="sidebar__post-content">
-										<a class="sidebar__post-date" href="#">
-											<i class="far fa-calendar-alt"></i>
-											Oct 25, 2020
-										</a>
-										<h3>
-											<a href="#">Consequntur magni dolore eos qui.
-											</a>
-										</h3>
-									</div>
-									<!-- /.sidebar__post-content -->
-								</div>
-								<!-- /.sidebar__post-single -->
-								<div class="sidebar__post-single">
-									<div class="sidebar__post-image">
-										<img src="assets/images/blog/blog-lp-1-2.jpg" alt="">
-									</div>
-									<!-- /.sidebar__post-image -->
-									<div class="sidebar__post-content">
-										<a class="sidebar__post-date" href="#">
-											<i class="far fa-calendar-alt"></i>
-											Oct 25, 2020
-										</a>
-										<h3>
-											<a href="#">Consequntur magni dolore eos qui.
-											</a>
-										</h3>
-									</div>
-									<!-- /.sidebar__post-content -->
-								</div>
-								<!-- /.sidebar__post-single -->
-								<div class="sidebar__post-single">
-									<div class="sidebar__post-image">
-										<img src="assets/images/blog/blog-lp-1-3.jpg" alt="">
-									</div>
-									<!-- /.sidebar__post-image -->
-									<div class="sidebar__post-content">
-										<a class="sidebar__post-date" href="#">
-											<i class="far fa-calendar-alt"></i>
-											Oct 25, 2020
-										</a>
-										<h3>
-											<a href="#">Consequntur magni dolore eos qui.
-											</a>
-										</h3>
-									</div>
-									<!-- /.sidebar__post-content -->
-								</div>
-								<!-- /.sidebar__post-single -->
-							</div>
-							<!-- /.sidebar__post -->
-						</div>
-						<!-- /.sidebar__single -->
-						<div class="sidebar__single">
-							<h3 class="sidebar__title">Popular Tags</h3>
-							<div class="sidebar__tags">
-								<a href="#">Museum</a>
-								<a href="#">Drawing</a>
-								<a href="#">Art</a>
-								<a href="#">Book</a>
-								<a href="#">Publication</a>
-								<a href="#">Gallery</a>
-								<a href="#">Muzex</a>
-								<a href="#">Collection</a>
-							</div>
-							<!-- /.sidebar__tags -->
-						</div>
+						
+						
 						<!-- /.sidebar__single -->
 					</div>
 					<!-- /.sidebar -->
