--- a/templates/ClientHome/BlogManagement/edit-article.html.twig
+++ b/templates/ClientHome/BlogManagement/edit-article.html.twig
@@ -20,6 +20,7 @@
                             <div class="text-danger">{{ form_errors(form.titre) }}</div>
                         </div>
                         <div class="col-lg-6">
+                        <i class="fas fa-paperclip"></i>
                             {{ form_row(form.imagePath) }}
                             <div class="text-danger">{{ form_errors(form.imagePath) }}</div>
                         </div>
@@ -28,7 +29,7 @@
                             <div class="text-danger">{{ form_errors(form.contenu) }}</div>
                         </div>
                         <div class="col-lg-12">
-                            {{ form_row(form.submit, {'label': 'Update'}) }} 
+                            {{ form_row(form.submit) }} 
                         </div>
                     </div>
                     {{ form_end(form) }}
