added symfony paginator to blogs

--- a/templates/ClientHome/BlogManagement/article-details.html.twig
+++ b/templates/ClientHome/BlogManagement/article-details.html.twig
@@ -92,7 +92,7 @@
 							<p>You can explore here every thing you see .</p>
 							<ul class="list-unstyled sidebar__cat-list">
 								<li>
-									<a href="#">All Blogs</a>
+									<a href="{{path('app_articles')}}">All Blogs</a>
 								</li>
 								<li>
 									<a href="#">My Blogs</a>
