--- a/templates/ClientHome/BlogManagement/articles-list.html.twig
+++ b/templates/ClientHome/BlogManagement/articles-list.html.twig
@@ -1,108 +1,82 @@
 {% extends 'base.html.twig' %}
-{% block title %}Blog - ArtHub
-{% endblock %}
-
+{% block title %}Blog - ArtHub{% endblock %}
 {% block body %}
-
-	{% include 'ClientHome/header.html.twig' with {'page_title': 'Articles'} %}
-	<section class="blog-one blog-standard-page">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8">
-					<div class="row">
-						<div class="col-lg-12">
-							{% for article in articles %}
-								<div class="blog-one__single">
-									<div class="blog-one__image">
-										<img src="{{ asset(article.imagePath ?  article.imagePath : 'images/blog/dafaultblog.jpg') }}" alt="">
-
-									</div>
-									<!-- /.blog-one__image -->
-									<div class="blog-one__content">
-										<ul class="blog-one__meta list-unstyled">
-											<li>
-												<a href="#">By
-													{{ article.utilisateur.pseudo }}</a>
-											</li>
-											<li>
-												<a href="#">Published:
-													{{ article.dateCreation|date('Y/m/d ') }}</a>
-											</li>
-										</ul>
-										<!-- /.blog-one__meta list-unstyled -->
-										<h3>
-											<a href="{{ path('article_details', {'articleId': article.articleId}) }}">{{ article.titre }}</a>
-										</h3>
-										<p>{{ article.contenu|slice(0, 150) }}
-										</p>
-										<a href="{{ path('article_details', {'articleId': article.articleId}) }}" class="blog-one__link">Learn More</a>
-										<!-- /.blog-one__link -->
-									</div>
-									<!-- /.blog-one__content -->
-								</div>
-								<!-- /.blog-one__single -->
-							{% endfor %}
-						</div>
-						<!-- /.col-lg-12 -->
-					</div>
-					<!-- /.row -->
-					<div class="text-center d-flex justify-content-start">
-						<div class="post-pagination">
-							<a href="#">1</a>
-							<a href="#">2</a>
-							<a href="#">3</a>
-							<a href="#">
-								<i class="fa fa-angle-right"></i>
-							</a>
-						</div>
-						<!-- /.post-pagination -->
-					</div>
-					<!-- /.text-center d-flex justify-content-center -->
-				</div>
-				<!-- /.col-lg-8 -->
-				<div class="col-lg-4">
-					<div class="sidebar">
-						<div class="sidebar__single">
-							<h3 class="sidebar__title">Search</h3>
-							<form action="#" class="sidebar__search">
-								<input type="text" placeholder="Search">
-								<button type="submit">
-									<i class="muzex-icon-search"></i>
-								</button>
-							</form>
-						</div>
-						<!-- /.sidebar__single -->
-						<div class="sidebar__single">
-							<h3 class="sidebar__title">Blogs</h3>
-							<p>You can explore here every thing you see .</p>
-							<ul class="list-unstyled sidebar__cat-list">
-								<li>
-									<a href="#">All Blogs</a>
-								</li>
-								<li>
-									<a href="#">My Blogs</a>
-								</li>
-								<li>
-									<a href="{{ path('add_article') }}">Add Blog</a>
-								</li>
-							</ul>
-						</div>
-
-						
-
-
-						<!-- /.sidebar__single -->
-
-
-					</div>
-					<!-- /.sidebar -->
-				</div>
-				<!-- /.col-lg-4 -->
-			</div>
-			<!-- /.row -->
-		</div>
-		<!-- /.container -->
-	</section>
-	<!-- /.blog-one blog-grid-page -->
-
+    {% include 'ClientHome/header.html.twig' with {'page_title': 'Articles'} %}
+    <section class="blog-one blog-standard-page">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            {% for article in pagination %}
+                                <div class="blog-one__single">
+                                    <div class="blog-one__image">
+                                        <img src="{{ asset(article.imagePath ? article.imagePath : 'images/blog/dafaultblog.jpg') }}" alt="">
+                                    </div>
+                                    <!-- /.blog-one__image -->
+                                    <div class="blog-one__content">
+                                        <ul class="blog-one__meta list-unstyled">
+                                            <li>
+                                                <a href="#">By {{ article.utilisateur.pseudo }}</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Published: {{ article.dateCreation|date('Y/m/d') }}</a>
+                                            </li>
+                                        </ul>
+                                        <!-- /.blog-one__meta list-unstyled -->
+                                        <h3>
+                                            <a href="{{ path('article_details', {'articleId': article.articleId}) }}">{{ article.titre }}</a>
+                                        </h3>
+                                        <p>{{ article.contenu|slice(0, 150) }}</p>
+                                        <a href="{{ path('article_details', {'articleId': article.articleId}) }}" class="blog-one__link">Learn More</a>
+                                        <!-- /.blog-one__link -->
+                                    </div>
+                                    <!-- /.blog-one__content -->
+                                </div>
+                                <!-- /.blog-one__single -->
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        {{ knp_pagination_render(pagination) }}
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="sidebar">
+                        <div class="sidebar__single">
+                            <h3 class="sidebar__title">Search</h3>
+                            <form action="#" class="sidebar__search">
+                                <input type="text" placeholder="Search">
+                                <button type="submit">
+                                    <i class="muzex-icon-search"></i>
+                                </button>
+                            </form>
+                        </div>
+                        <!-- /.sidebar__single -->
+                        <div class="sidebar__single">
+                            <h3 class="sidebar__title">Blogs</h3>
+                            <p>You can explore everything you see here.</p>
+                            <ul class="list-unstyled sidebar__cat-list">
+                                <li>
+                                    <a href="{{path('app_articles')}}">All Blogs</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Blogs</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('add_article') }}">Add Blog</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.sidebar__single -->
+                    </div>
+                    <!-- /.sidebar -->
+                </div>
+                <!-- /.col-lg-4 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.blog-one blog-grid-page -->
 {% endblock %}
